# CSV-Project

./: README.md
CSV Project/: GITHUB_PROJECT_SUMMARY.md  GITHUB_UPLOAD_GUIDE.md  PROJECT_SUMMARY.md  README.md  demo.py  pyproject.toml  pyrightconfig.json  requirements.txt  run_demo.bat  upload_to_github.bat
CSV Project/config/: etl_config.json
CSV Project/data/: sample_customers.csv
CSV Project/src/: __init__.py  bigquery_loader.py  etl_pipeline.py  extractor.py  transformer.py
