# Editor configuration to help VS Code/Pylance resolve imports correctly

[tool.pylsp-mypy]
enabled = false

[tool.pyright]
include = ["src", "demo.py"]
exclude = [".venv", "**/__pycache__"]
pythonVersion = "3.14"
pythonPlatform = "Windows"
extraPaths = ["./src"]
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = false
useLibraryCodeForTypes = true

[tool.ruff]
target-version = "py314"
line-length = 88
exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "W", "F"]
ignore = ["E501"]  # Line too long

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"